View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028061 | Open CASCADE | OCCT:Samples | public | 2016-11-07 19:47 | 2016-12-09 16:39 |
Reporter | Assigned To | apn | |||
Priority | high | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0028061: Samples - Highlighting of any object with "Hidden On" option leads to crash in mfc Modeling | ||||
Description | Highlighting of any object with "Hidden On" option leads to crash in mfc Modeling | ||||
Steps To Reproduce | Within Draw Harness:pload MODELING VISUALIZATION box b 1 2 3 vclear vinit View1 vdisplay -dispMode 1 b vfit vhlr on vmoveto 250 250 Within MFC sample: • Run mfc Modeling sample • Create boxes using "Box" button • Press "Hidden On" button • Try to highlight any box | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug28061 | ||||
|
Dear Varvara, please fix regression introduced within 0027818. |
|
Branch CR28061 has been created by vpa. SHA-1: c363856eceec2a5ed8e2445edd5724653ca3d9eb Detailed log of new commits: Author: vpa Date: Wed Nov 9 16:06:44 2016 +0300 0028061: Samples - Highlighting of any object with "Hidden On" option leads to crash in mfc Modeling - handle to highlight style is nullified only in Release() method of OpenGl_Structure; - Graphic3d_CStructure and Graphic3d_Structure now return copy of highlight style regarding to structure's highlight state; - test case for issue 0028061 |
|
Dear Kirill, please review patch in branch CR28061. |
|
Branch CR28061 has been updated forcibly by vpa. SHA-1: 4477fc96fe7ce8918dc9425b65d61b47d4056e04 |
|
Branch CR28061 has been updated forcibly by vpa. SHA-1: d5a3ba021a7b85610419aa9c94181b99f518b917 |
|
Branch CR28061 has been updated forcibly by kgv. SHA-1: 5626ebfe13d0bbe748f2673c3a3f72d2c0ae9d50 |
|
Please test the patch. |
|
Dear BugMaster, Branch CR28061 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 5626ebfe13d0bbe748f2673c3a3f72d2c0ae9d50 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1135 Regressions/Differences/Improvements: http://occt-tests/CR28061-master-OCCT/Windows-64-VC10/gdt/presentation/A5.html gdt presentation A5: IMPROVEMENT Testing cases: http://occt-tests/CR28061-master-OCCT/Debian70-64/bugs/vis/bug28061.html http://occt-tests/CR28061-master-OCCT/Windows-64-VC10/bugs/vis/bug28061.html bugs vis bug28061: OK Testing on Linux: occt component : Total MEMORY difference: 91235778 / 91873955 [-0.69%] Total CPU difference: 21759.330000000202 / 21600.690000000308 [+0.73%] products component : Total MEMORY difference: 30024879 / 29935586 [+0.30%] Total CPU difference: 5309.309999999983 / 5309.249999999963 [+0.00%] Testing on Windows: occt component : Total MEMORY difference: 56588043 / 56597852 [-0.02%] Total CPU difference: 20325.72909229838 / 19669.510885798518 [+3.34%] products component : Total MEMORY difference: 20822538 / 20790286 [+0.16%] Total CPU difference: 5299.9155735999875 / 5153.477434899959 [+2.84%] There are no differences in images found by testdiff. |
|
Dear vpa, Branch CR28061 has been rejected due to: - regressions/differences/improvements |
|
Dear Mikhail, it is impossible that improvement in gdt/presentation/A5 is caused by this patch. Code changes in CR28061 are related to visualization component which is not used at all in gdt/presentation/A5. Moreover, on my PC test case does show the error message just like on master. Please, check gdt/presentation/A5 once again. |
|
Test case gdt/presentation/A5 was retested, now it is BAD (known problem). Dear BugMaster, Branch CR28061 is TESTED. |
|
Branch CR28061 has been deleted by kgv. SHA-1: 5626ebfe13d0bbe748f2673c3a3f72d2c0ae9d50 |
occt: master 424392e0 2016-11-09 14:55:51
Committer: apn Details Diff |
0028061: Samples - Highlighting of any object with "Hidden On" option leads to crash in mfc Modeling Graphic3d_Structure::Highlight() does not call UnHighlight() anymore. |
Affected Issues 0028061 |
|
mod - src/Graphic3d/Graphic3d_Structure.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Structure.cxx | Diff File | ||
add - tests/bugs/vis/bug28061 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-07 19:47 |
|
New Issue | |
2016-11-07 19:47 |
|
Assigned To | => abv |
2016-11-08 14:02 | kgv | Product Version | => 7.1.0 |
2016-11-08 14:02 | kgv | Target Version | 7.2.0 => 7.1.0 |
2016-11-08 14:02 | kgv | Steps to Reproduce Updated | |
2016-11-08 14:02 | kgv | Steps to Reproduce Updated | |
2016-11-08 14:04 | kgv | Relationship added | child of 0027818 |
2016-11-08 14:06 | kgv | Note Added: 0060010 | |
2016-11-08 14:06 | kgv | Assigned To | abv => vpa |
2016-11-08 14:06 | kgv | Priority | normal => high |
2016-11-08 14:06 | kgv | Status | new => assigned |
2016-11-08 14:07 | kgv | Steps to Reproduce Updated | |
2016-11-09 16:07 | git | Note Added: 0060122 | |
2016-11-09 16:07 |
|
Note Added: 0060123 | |
2016-11-09 16:07 |
|
Assigned To | vpa => kgv |
2016-11-09 16:07 |
|
Status | assigned => resolved |
2016-11-09 16:51 | git | Note Added: 0060130 | |
2016-11-09 17:56 | git | Note Added: 0060144 | |
2016-11-09 19:35 | git | Note Added: 0060147 | |
2016-11-09 19:35 | kgv | Note Added: 0060148 | |
2016-11-09 19:35 | kgv | Assigned To | kgv => bugmaster |
2016-11-09 19:35 | kgv | Severity | minor => major |
2016-11-09 19:35 | kgv | Status | resolved => reviewed |
2016-11-09 20:45 |
|
Assigned To | bugmaster => mkv |
2016-11-10 17:58 |
|
Note Added: 0060209 | |
2016-11-10 17:59 |
|
Note Added: 0060210 | |
2016-11-10 17:59 |
|
Assigned To | mkv => vpa |
2016-11-10 17:59 |
|
Status | reviewed => feedback |
2016-11-10 17:59 |
|
Test case number | => bugs vis bug28061 |
2016-11-10 18:54 |
|
Assigned To | vpa => ski |
2016-11-10 18:54 |
|
Assigned To | ski => vpa |
2016-11-10 19:07 |
|
Note Added: 0060213 | |
2016-11-10 19:08 |
|
Assigned To | vpa => mkv |
2016-11-11 13:13 |
|
Note Added: 0060238 | |
2016-11-11 13:13 |
|
Assigned To | mkv => bugmaster |
2016-11-11 13:13 |
|
Status | feedback => tested |
2016-11-18 16:37 | apn | Changeset attached | => occt master 424392e0 |
2016-11-18 16:37 | apn | Assigned To | bugmaster => apn |
2016-11-18 16:37 | apn | Status | tested => verified |
2016-11-18 16:37 | apn | Resolution | open => fixed |
2016-12-07 11:31 | git | Note Added: 0061271 | |
2016-12-09 16:29 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |