0028061: Samples - Highlighting of any object with "Hidden On" option leads to crash in mfc Modeling

Graphic3d_Structure::Highlight() does not call UnHighlight() anymore.